--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "nyan-progress-webpack-plugin": "^1.2.0",
     "postcss-loader": "^1.3.3",
     "postcss-px2rem": "^0.3.0",
+    "raw-loader": "^0.5.1",
     "rucksack-css": "^0.9.1",
     "script-loader": "^0.7.0",
     "style-loader": "^0.13.1",
